frontend/packages/volto-light-theme/src/theme/blocks/_slider.scss
// Slider Block
$sliderImagesAspectRatio: var(--slider-images-aspect-ratio, 16/9);

.block.slider {
  // Reset original
  &:not(.inner):not([role='presentation']) {
    padding-bottom: 0;
  }

  .slider-viewport {
    margin-bottom: $spacing-medium;
  }

  .slider-dots {
    padding-bottom: $spacing-medium;
  }

  .teaser-item,
  .grid-teaser-item {
    flex-direction: column;
    @media only screen and (max-width: $computer-width) {
      height: 100%;
    }
  }
  .link-container {
    @media only screen and (max-width: $computer-width) {
      height: 100%;
    }
  }

  .teaser-item {
    .highlight-image-wrapper {
      display: flex; // Small gap was appearing between the wrapper and the image (??)

      img {
        // Override Volto's Image Component inline style aspect ratio.
        aspect-ratio: var(
          --image-aspect-ratio,
          $sliderImagesAspectRatio
        ) !important;
      }
    }
    @media only screen and (max-width: $computer-width) {
      display: flex;
      & > a {
        height: 100%;
      }
    }
    .teaser-item-title {
      position: absolute;
      top: 50%;
      width: 570px;
      min-height: 321px;
      padding: 60px 50px 60px 100px;
      background: rgba(0, 0, 0, 0.75);
      color: white;
      transform: translateY(-50%);

      @container (max-width: 1024px) {
        padding: 30px 30px 30px 80px;
      }

      @media only screen and (max-width: $computer-width) {
        position: static;
        width: 100%;
        height: 100%;
        padding: 60px 20px;
        background: $black;
        transform: none;
      }
      &.has--slider--flagAlign--right {
        right: 0;
      }

      .title {
        .supertitle {
          display: inline-block;
          margin-bottom: 20px;
          font-size: 14px;
          font-weight: 700;
          letter-spacing: 1px;
          line-height: 18px;
          text-transform: uppercase;
        }
        h2 {
          @include text-heading-h2();
          margin-top: 0px;
          margin-bottom: $spacing-medium;
          color: $white;
        }
      }
      p {
        @include introduction();
        display: -webkit-box;
        overflow: hidden;
        margin-bottom: 50px;
        -webkit-box-orient: vertical;
        color: $white;
        -webkit-line-clamp: 5;
        text-overflow: ellipsis;
        @media only screen and (max-width: $computer-width) {
          margin-bottom: $spacing-large;
        }
      }
    }
  }

  .slide-wrapper:not(.empty-slide) {
    padding-bottom: $spacing-xlarge;
  }

  .teaser-item.top {
    position: relative;
  }

  .teaser-item button {
    display: initial;
    padding: 8px 20px;
    border: 1px solid currentColor;
    border-radius: 0;
    background-color: transparent;
    color: $white;
    font-size: 16px;
    font-weight: 900;
    line-height: 20px;
    text-align: center;
  }

  &.simple {
    .slider-viewport {
      margin-bottom: 0;
      container-name: slider;
      container-type: inline-size;
    }
    .teaser-item {
      display: grid;
      min-width: 0;
      align-items: center;
      padding: 0 130px;
      aspect-ratio: 2/1;
      background-color: var(--theme-color);
      gap: clamp(30px, 4vw, 57px);
      grid-template-areas: 'images content';
      grid-template-rows: auto;

      @media only screen and (max-width: $computer-width) {
        display: inline-block;
        padding: 0 0;
        aspect-ratio: auto;
      }

      &.has--slider--flagAlign--right {
        grid-template-areas: 'content images';
        grid-template-columns: minmax(0, clamp(300px, 40vw, 600px)) minmax(
            0,
            1fr
          );
      }
      &.has--slider--flagAlign--left {
        grid-template-areas: 'images content';
        grid-template-columns: minmax(0, 1fr) minmax(
            0,
            clamp(300px, 40vw, 600px)
          );
      }

      @container slider (max-width: #{$layout-container-width}) {
        #page-edit &,
        #page-add & {
          &.has--slider--flagAlign--right {
            grid-template-columns: minmax(0, 60%) minmax(0, 40%);
          }
          &.has--slider--flagAlign--left {
            grid-template-columns: minmax(0, 40%) minmax(0, 60%);
          }
        }
      }

      .highlight-image-wrapper {
        grid-area: images;
        img {
          aspect-ratio: var(
            --image-aspect-ratio,
            $sliderImagesAspectRatio
          ) !important;

          @media only screen and (max-width: $computer-width) {
            width: 100%;
          }
        }
      }
      .teaser-item-title {
        position: relative;
        top: 0;
        width: 100%;
        align-content: center;
        padding: 0;
        background: none;
        color: var(--theme-foreground-color);
        grid-area: content;
        transform: none;

        @media only screen and (max-width: $computer-width) {
          height: 100%;
          align-content: start;
          padding: 60px 20px;
          background: var(--theme-color);
          color: var(--theme-foreground-color);
          button,
          .title > h2,
          p.slider-description {
            color: var(--theme-foreground-color) !important;
          }
          p.slider-description {
            -webkit-line-clamp: 8;
            line-clamp: 8;
          }
        }

        .title {
          h2 {
            color: var(--theme-foreground-color);
          }
        }
        p {
          color: var(--theme-foreground-color);
          -webkit-line-clamp: 10;
          line-clamp: 10;
        }
      }
      .slider-description {
        margin-bottom: $spacing-large;

        @media only screen and (min-width: $computer-width) {
          font-size: 18px;
          line-height: 24px;
        }
      }
    }
    .slider-button {
      display: flex;
      width: 130px;
      height: 100%;
      align-items: center;
      background: none;
      opacity: 1;

      svg.icon {
        width: 50px !important;
        height: 50px !important;
        padding: 40px;
        color: var(--theme-foreground-color);
      }
      @media only screen and (max-width: $computer-width) {
        display: none;
      }
    }
    button {
      color: var(--theme-foreground-color);
    }
  }
}

